--- a/src/main/webapp/script/cliente/cargarClientes.xhtml
+++ b/src/main/webapp/script/cliente/cargarClientes.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <p:outputLabel value="Importación masiva de Clientes"/>
         </ui:define>
