--- a/src/main/webapp/script/producto/bulkLoad.xhtml
+++ b/src/main/webapp/script/producto/bulkLoad.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <h:outputText value="Carga Masiva de #{applicationBean.productDescription}/#{applicationBean.productComponentDescription}/#{applicationBean.productSubComponentDescription}"></h:outputText>
         </ui:define>
@@ -19,11 +19,16 @@
 
         <ui:define name="body">
 
-            <pe:layoutPane id="layout1_1" position="center" >
-
-                <f:facet name="header">
-                    <h:outputText value="Carga Masiva de #{applicationBean.productDescription}/#{applicationBean.productComponentDescription}/#{applicationBean.productSubComponentDescription}"/>
-                </f:facet>
+            <!-- page-header -->
+            <div class="page-header">
+                <div class="row">
+                        <h1><i class="fa fa-building page-header-icon"></i>&nbsp;Carga Masiva de #{applicationBean.productDescription}/#{applicationBean.productComponentDescription}/#{applicationBean.productSubComponentDescription}</h1>
+                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                            <i class="fa fa-info-circle"/>
+                        </p:commandLink> 
+                    
+                </div>
+            </div><!-- / .page-header --> 
 
                 <h:form id="form" enctype="multipart/form-data">
 
@@ -141,7 +146,6 @@
                         </p:dataTable>
                     </h:form>
                 </h:panelGrid>
-            </pe:layoutPane>
         </ui:define>
     </ui:composition>
 </html>
