--- a/src/main/webapp/script/template_inbox_bootstrap_config.xhtml
+++ b/src/main/webapp/script/template_inbox_bootstrap_config.xhtml
@@ -10,7 +10,8 @@
           xmlns:h="http://java.sun.com/jsf/html"
           xmlns:f="http://java.sun.com/jsf/core"
           xmlns:pe="http://primefaces.org/ui/extensions"
-          xmlns:c="http://java.sun.com/jsp/jstl/core">
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          xmlns:go="http://java.sun.com/jsf/composite/go">
         <!--<![endif]-->
         <f:view contentType="text/html" encoding="UTF-8">
             <h:head>
@@ -484,12 +485,12 @@
                                     </div>
                                 </div>
                                 <ul class="navigation">
-                                    <li id="dashboardTour" class="#{view.viewId.contains('dashboard') ? 'active':''}" >
+                                    <li id="dashboardTour">
                                         <p:commandLink action="#{dashboardController.prepareList()}" ajax="false">
                                             <i class="menu-icon fa fa-dashboard"></i><span class="mm-text">Dashboard</span>
                                         </p:commandLink>
                                     </li>
-                                    <li id="inboxmenu" >
+                                    <li id="inboxmenu">
                                         <p:commandLink action="#{casoController.inbox}" ajax="false">
                                             <i class="menu-icon fa fa-inbox"></i><span class="mm-text">Inbox</span>
                                         </p:commandLink>
@@ -638,9 +639,28 @@
                                         Content
                         -->
                         <!-- Content here -->
-                        <ui:insert name="west"/>  
 
-                        <ui:insert name="body"/>  
+                       
+
+
+                        <div class="row">
+                            <div class="col-sm-3 col-xs-12 sidebar">
+                                <h:form>
+
+                                    <go:configMenuList />
+
+                                </h:form>
+
+                                <ui:insert name="west"/>  
+                            </div>
+                            <div class="col-sm-9 col-xs-12 main">
+
+                                 <ui:insert name="content_header"/>
+                                <ui:insert name="body"/> 
+
+                            </div>
+
+                        </div>
 
                     </div> <!-- / #content-wrapper -->
 
@@ -813,7 +833,9 @@
                     tour.init();
                     tour.start();
 
-                    $(function () {
+                    init.push(function () {
+                        $('div.notifications-list').slimScroll({height: 250});
+                        $('.nav-pills, .nav-tabs').tabdrop();
                         $("select.select2Input").select2({
                             dropdownAutoWidth: true,
                             allowClear: true
@@ -823,12 +845,6 @@
                             allowClear: true
                         });
                         // Initialize the tour
-                    });
-                    
-                    init.push(function () {
-                        $('div.notifications-list').slimScroll({height: 250});
-                        $('.nav-pills, .nav-tabs').tabdrop();
-
 
                     });
                     window.PixelAdmin.start(init);
